- JAVA 16 update - use URL to descrribe location of files to record - implements SMB protocol to record file from Windows world ( use of jcif ) - upgrade kafka version - upgrade ignite version